# kklogIced

./: Cargo.toml  LICENSE  Makefile
src/: application.rs  layout.rs  main.rs  message.rs  style.rs
src/components/: mod.rs  square.rs
src/core/: color.rs  config.rs  mod.rs  node.rs  stream.rs  user.rs
