[package]
name = "kklogIced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12", features = ["canvas", "debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
