[package]
name = "kklogIced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12", features = [
    "canvas",
    "debug",
    "smol",
    "advanced",
    "web-colors",
    "tokio",
] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
async-tungstenite = { version = "0.25.0", features = [
    "async-std-runtime",
    "tokio-rustls-webpki-roots",
    "async-tls",
] }
url = "2.5.0"
