[package]
name = "kklogIced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12", features = [
    "canvas",
    "debug",
    "smol",
    "advanced",
    "web-colors",
    "tokio",
] }
iced_style = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "*"
tokio = { version = "1", features = ["full"] }
async-tungstenite = { version = "0.25.0", features = [
    "async-std-runtime",
    "tokio-rustls-webpki-roots",
    "async-tls",
] }
url = "2.5.0"
rand = "0.8"
home = "0.5"
futures-util = "0.3"
